--- a/estilo.css
+++ b/estilo.css
@@ -2,3 +2,34 @@
     margin: 0;
     padding: 0;
 }
+.center{
+    text-align: center;
+    font-size: 35px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.moradobonis{
+    color: #a907ac;
+    font-size: 80px;
+
+}
+.tablita{
+    background-color: #a907ac;
+    color: white;
+
+
+}
+td{
+    width: 500px;
+    font-size: 20px;
+}
+
+img{
+   margin: 20px 40%;
+   width: 300px;
+   height: 300px;
+   outline: solid black;
+}
+footer{
+    padding: 10px 50px 0px 10px;
+}
