--- a/estilo.css
+++ b/estilo.css
@@ -11,11 +11,13 @@
 .moradobonis{
     color: #a907ac;
     font-size: 80px;
+    
 
 }
 .tablita{
     background-color: #a907ac;
     color: white;
+    border: 
 
 
 }
